--- a/registerPage.html
+++ b/registerPage.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="loginPage/loginPage.css">
+    <link rel="stylesheet" href="registerPage/registerPage.css">
 </head>
 <body>
     <div class="container">
         <h1>My ToDoList</h1>
-    
-        <form id="loginForm">
+
+        <form id="registerForm">
             <label for="username">Enter Username</label>
             <input type="text" id="username" placeholder="e.g. Mamang1">
             <label for="password">Enter Password</label>
             <input type="password" id="password" placeholder="e.g. urang123!">
-            <button id="login-button" type="submit">Login</button>
+            <button id="register-button" type="submit">Register</button>
         </form>
-    
-        <a href="registerPage.html">Register</a>
-        <script src="loginPage/loginController.js"></script>
+
+        <a href="index.html"></a>
+        <script src="registerPage/registerController.js"></script>
     </div>
 </body>
 </html>
