adding "delete task" feature

--- a/homePage.html
+++ b/homePage.html
@@ -47,7 +47,7 @@
             <th>Task Completion Date</th>
           </tr>
         </thead>
-        <tbody id="completedList"></tbody>
+        <tbody id="completedTaskList"></tbody>
       </table>
 
       <h2 style="background-color: #ff0000">Deleted Tasks</h2>
@@ -58,7 +58,7 @@
             <th>Deadline</th>
           </tr>
         </thead>
-        <tbody id="deletedList"></tbody>
+        <tbody id="deletedTaskList"></tbody>
       </table>
 
       <h2 style="background-color: rgb(82, 204, 255)">Edited Tasks History</h2>
@@ -70,7 +70,7 @@
             <th>New Deadline</th>
           </tr>
         </thead>
-        <tbody id="editedList"></tbody>
+        <tbody id="editedTaskList"></tbody>
       </table>
     </div>
 
