--- a/homePage.html
+++ b/homePage.html
@@ -15,7 +15,7 @@
           <img src="homepage/profile.png" alt="" width="50px" height="50px" />
           <span class="name" id="username">Theodore Johnson</span>
         </div>
-        <p>My Score: <span id="score">100</span></p>
+        <!-- <p>My Score: <span id="score">100</span></p> -->
       </div>
 
       <hr />
